--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,7 @@ ExportedObj/
 # OS generated #
 # ============ #
  .DS_Store
- .DS_Store?
- ._*
  .Spotlight-V100
  .Trashes
- Icon?
- ehthumbs.db
  Thumbs.db
+ *.swp
