--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
      <Compile Include="Assets\Models\Standard Assets\Water (Pro Only)\Water4\Sources\Scripts\WaterTile.cs" />
      <Compile Include="Assets\Scripts\BarrelLid.cs" />
      <Compile Include="Assets\Scripts\BillboardMoon.cs" />
+     <Compile Include="Assets\Scripts\Character.cs" />
      <Compile Include="Assets\Scripts\CooldownHelper.cs" />
      <Compile Include="Assets\Scripts\DropletImpactAudio.cs" />
      <Compile Include="Assets\Scripts\ExplanationControl.cs" />
@@ -83,6 +84,7 @@
      <Compile Include="Assets\Scripts\FireAudio.cs" />
      <Compile Include="Assets\Scripts\HandHelper.cs" />
      <Compile Include="Assets\Scripts\HandMagic.cs" />
+     <Compile Include="Assets\Scripts\IceWall.cs" />
      <Compile Include="Assets\Scripts\Magic.cs" />
      <Compile Include="Assets\Scripts\MagicConstant.cs" />
      <Compile Include="Assets\Scripts\NetworkController.cs" />
